SERVER-67406 Ensure we don't remove user $fields when removing metadata