src/mongo/s/query/router_stage_remove_metadata_fields.cpp
@@ -53,9 +53,14 @@ StatusWith<ClusterQueryResult> RouterStageRemoveMetadataFields::next() {
     }
 
     BSONObjIterator iterator(*childResult.getValue().getResult());
+
     // Find the first field that we need to remove.
-    while (iterator.more() && (*iterator).fieldName()[0] != '$') {
-        ++iterator;
+    for (; iterator.more(); ++iterator) {
+        // To save some time, we ensure that the current field name starts with a $
+        // before checking if it's actually a metadata field in the map.
+        if ((*iterator).fieldName()[0] == '$' && _metaFields.contains((*iterator).fieldName())) {
+            break;
+        }
     }
 
     if (!iterator.more()) {
